--- a/client/src/adminDashboard/index.html
+++ b/client/src/adminDashboard/index.html
@@ -8,6 +8,6 @@
   </head>
   <body class= dark:bg-slate-800>
     <div id="root"></div>
-	<script type="module" src="/main.jsx"></script>
+	<script type="module" src="adminDashboard.jsx"></script>
   </body>
 </html>
