--- a/client/src/register/index.html
+++ b/client/src/register/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en" class= "dark">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body class= dark:bg-slate-800>
+  <body class=dark:bg-slate-800>
     <div id="root"></div>
-	<script type="module" src="/main.jsx"></script>
+	<script type="module" src="./register.jsx"></script>
   </body>
 </html>
