--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home Page</title>
   </head>
-  <body class= dark:bg-slate-800>
+  <body class= dark:bg-slate-800 text-base>
     <div id="root"></div>
 	<script type="module" src="/main.jsx"></script>
   </body>
